--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Protfolio WebSite</title>
-    <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
     </nav>
    <div class="headofNav">
     <div class="developer">
-        <img src="/img/developer.png" class="developer" alt="Developer">
+        <img src="./img/developer.png" class="developer" alt="Developer">
     </div>
     
     <div class="headContent">
@@ -71,7 +71,7 @@
             <div class="workExpirince">
 
                 <div class="skillCard">
-                    <img src=" /img/icons/js.png" alt="" class="skillImg">
+                    <img src=" ./img/icons/js.png" alt="" class="skillImg">
                     <h3 class="skillTitle">Vanila Javascript</h3>
                     <p class="skillContent">Vanilla JS, or plain JavaScript, is the core scripting language of the web. It enables dynamic content, interactivity,
                     and robust functionality without relying on frameworks. Mastering Vanilla JS provides a solid foundation, enhancing your
@@ -79,14 +79,14 @@
                 </div>
 
                 <div class="skillCard">
-                    <img src="/img/icons/react.png" alt="" class="skillImg">
+                    <img src="./img/icons/react.png" alt="" class="skillImg">
                     <h3 class="skillTitle">React</h3>
                     <p class="skillContent">React is a leading JavaScript library for creating dynamic, responsive user interfaces. Developed by Facebook, it excels
                     in building component-based architectures, ensuring efficient rendering and high performance. React's reusable
                     components and virtual DOM make it an essential tool for modern web development, enhancing both speed and scalability.</p>
                 </div>
                 <div class="skillCard">
-                    <img src="/img//icons/nodejs.png" alt="" class="skillImg">
+                    <img src="./img//icons/nodejs.png" alt="" class="skillImg">
                     <h3 class="skillTitle">Node.js</h3>
                     <p class="skillContent">Node.js is a versatile JavaScript runtime that enables server-side scripting. Its event-driven, non-blocking
                     architecture makes it ideal for scalable, real-time applications. With Node.js, developers can use JavaScript for both
@@ -94,7 +94,7 @@
                     applications.</p>
                 </div>
                 <div class="skillCard">
-                    <img src="/img//icons//mongo.png" alt="" class="skillImg">
+                    <img src="./img//icons//mongo.png" alt="" class="skillImg">
                     <h3 class="skillTitle">MongoDb</h3>
                     <p class="skillContent">MongoDB is a leading NoSQL database known for its flexibility and scalability. It stores data in JSON-like documents,
                     allowing for dynamic schemas. Ideal for handling large volumes of unstructured data, MongoDB supports high-performance,
@@ -157,7 +157,7 @@
                     </div>
                 </div>
             </div>
-            <button class="CvBtn"><a href="/img/Aminul.pdf" class="cvLink" download="Aminul-Cv"><i class="fa-solid fa-file-arrow-down"></i> Download Cv</a></button>
+            <button class="CvBtn"><a href="./img/Aminul.pdf" class="cvLink" download="Aminul-Cv"><i class="fa-solid fa-file-arrow-down"></i> Download Cv</a></button>
         </section>
     </div>
 </main>
