--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
    <div class="headofNav">
     <div class="developer">
-        <img src="./img/developer.png" class="developer" alt="Developer">
+        <img src="./img//developer.png" class="developer" alt="Developer">
     </div>
     
     <div class="headContent">
